@@ -1,3 +1,8 @@
+2003-09-14  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* pp/opreport.cpp: handle 2.95 right io manipulator and the lack
+	  of a proper setw(w) << std::string
+
 2003-09-14  John Levon  <levon@movementarian.org>
 
 	* pp/opreport.cpp: re-add header for image summary
